--- a/src/components/Navigation/Hamburger.module.scss
+++ b/src/components/Navigation/Hamburger.module.scss
@@ -1,4 +1,6 @@
 .hamburger {
+  position: relative;
+  z-index: 9999;
   display: flex;
   padding: 20px;
   justify-content: center;
